--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-|--Welcome to WeFly Wiki--|
+| -- Welcome to WeFly's Repository -- |
+
+
+           | -- To Access -- | 
+https://we-fly.github.io/wefly/index.html
